queue naming convention enforced

--- a/PalladiumDwh.DWapi/Web.config
+++ b/PalladiumDwh.DWapi/Web.config
@@ -117,7 +117,7 @@
         <value>218460a6-02d0-c26b-9add-e6b8d13ccbf4</value>
       </setting>
       <setting name="WorkerCount" serializeAs="String">
-        <value>Manifest-10,Patient-10,PatientArt-5,PatientPharmacy-5,PatientVisits-20,PatientStatus-5,Covid-5,DefaulterTracing-1,PatientLabs-5,PatientBaselines-1,PatientAdverseEvents-1,Otz-5,Ovc-5,DepressionScreening-1,DrugAlcoholScreening-1,EnhancedAdherenceCounselling-1,GbvScreening-1,Ipt-1,AllergiesChronicIllness-1,ContactListing-1,default-1</value>
+        <value>manifest-10,patient-10,patientart-5,patientpharmacy-5,patientvisits-20,patientstatus-5,covid-5,defaultertracing-1,patientlabs-5,patientbaselines-1,patientadverseevents-1,otz-5,ovc-5,depressionscreening-1,drugalcoholscreening-1,enhancedadherencecounselling-1,gbvscreening-1,ipt-1,allergieschronicillness-1,contactlisting-1,default-1</value>
       </setting>
       <setting name="WorkerComandTimeout" serializeAs="String">
         <value>30</value>
