--- a/PalladiumDwh.Core.Tests/PalladiumDwh.Core.Tests.csproj
+++ b/PalladiumDwh.Core.Tests/PalladiumDwh.Core.Tests.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Services\MessagingReaderServiceTests.cs" />
     <Compile Include="Services\MessagingSenderServiceTests.cs" />
     <Compile Include="Services\LiveSyncServiceTests.cs" />
+    <Compile Include="Services\SyncServiceDiffTests.cs" />
     <Compile Include="Services\SyncServiceTests.cs" />
     <Compile Include="TestHelpers.cs" />
     <Compile Include="TestInitializer.cs" />
@@ -205,9 +206,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Application\Extracts" />
-  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
