Boardroom Upload Updates

--- a/Microsoft.AspNet.WebApi.Extensions.Compression.Server/Microsoft.AspNet.WebApi.Extensions.Compression.Server.csproj
+++ b/Microsoft.AspNet.WebApi.Extensions.Compression.Server/Microsoft.AspNet.WebApi.Extensions.Compression.Server.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.AspNet.WebApi.Extensions.Compression.Server</RootNamespace>
     <AssemblyName>Microsoft.AspNet.WebApi.Extensions.Compression.Server</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
