--- a/PalladiumDwh.ClientApp/database.config
+++ b/PalladiumDwh.ClientApp/database.config
@@ -1,13 +1,13 @@
 <connectionStrings>
   <add
     name="DWAPIRemote"
-    connectionString="Data Source=.;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=Sydney123;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=.;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=Megg96Megg;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient"
   />
 
   <add
     name="EMRDatabase"
-    connectionString="Data Source=.;Initial Catalog=IQTools_KeHMIS_NOVGITs;Persist Security Info=True;User ID=sa;Password=Sydney123;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=.;Initial Catalog=IQTools_KeHMIS_NOVGITs;Persist Security Info=True;User ID=sa;Password=Megg96Megg;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient"
   />
 
