--- a/PalladiumDwh.ClientUploader.Infrastructure.Tests/database.config
+++ b/PalladiumDwh.ClientUploader.Infrastructure.Tests/database.config
@@ -1,7 +1,7 @@
 <connectionStrings>
   <add
     name="DWAPIRemote"
-    connectionString="Data Source=.;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=Sydney123;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=.;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=Megg96Megg;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient" 
    />
 </connectionStrings>
