--- a/PalladiumDwh.DWapi/packages.config
+++ b/PalladiumDwh.DWapi/packages.config
@@ -3,7 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net462" />
   <package id="AutoMapper" version="10.1.1" targetFramework="net462" />
   <package id="bootstrap" version="3.3.7" targetFramework="net462" />
-  <package id="CommonServiceLocator" version="2.0.2" targetFramework="net462" />
+  <package id="CommonServiceLocator" version="2.0.2" targetFramework="net462" requireReinstallation="true" />
   <package id="CSharpFunctionalExtensions" version="2.0.0" targetFramework="net462" />
   <package id="Dapper" version="2.0.123" targetFramework="net462" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net462" />
@@ -23,9 +23,38 @@
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net462" />
+  <package id="Microsoft.AspNetCore.Authentication.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Authentication.Core" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Authorization" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Authorization.Policy" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Http" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Http.Extensions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Mvc.Core" version="2.2.5" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.ResponseCaching.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Routing" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net462" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyModel" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.ObjectPool" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.2.2" targetFramework="net462" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net462" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
@@ -41,7 +70,19 @@
   <package id="StructureMap.WebApi2" version="3.0.4.125" targetFramework="net462" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net462" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net462" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net48" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="7.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net462" />
   <package id="WebGrease" version="1.6.0" targetFramework="net462" />
   <package id="Z.Dapper.Plus" version="4.0.2" targetFramework="net462" />
