--- a/System.Net.Http.Extensions.Compression.Core/System.Net.Http.Extensions.Compression.Core.csproj
+++ b/System.Net.Http.Extensions.Compression.Core/System.Net.Http.Extensions.Compression.Core.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>System.Net.Http.Extensions.Compression.Core</RootNamespace>
     <AssemblyName>System.Net.Http.Extensions.Compression.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
