--- a/PalladiumDwh.ClientReader.Infrastructure.Tests/database.config
+++ b/PalladiumDwh.ClientReader.Infrastructure.Tests/database.config
@@ -2,12 +2,12 @@
 
   <add
     name="DWAPIRemote"
-    connectionString="Data Source=.;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=Megg96Megg;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=PAL-5CG2114M0C;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=Megg96Megg;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient"
   />
   <add
     name="EMRDatabase"
-    connectionString="Data Source=.;Initial Catalog=IQTools_Test;Persist Security Info=True;User ID=sa;Password=Megg96Megg;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=PAL-5CG2114M0C;Initial Catalog=IQTools_Test;Persist Security Info=True;User ID=sa;Password=Megg96Megg;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient"
   />
   <!--
