--- a/PalladiumDwh.DWapi/Web.config
+++ b/PalladiumDwh.DWapi/Web.config
@@ -41,7 +41,7 @@
     </handlers>
     <security>
       <requestFiltering>
-        <requestLimits maxAllowedContentLength="524288000" />
+        <requestLimits maxAllowedContentLength="2147483648" />
         <!--500MB-->
       </requestFiltering>
     </security>
@@ -180,7 +180,8 @@
     <add key="quartz.jobStore.useProperties" value="false" />
     <add key="quartz.jobStore.selectWithLockSQL" value="SELECT * FROM {0} LOCKS UPDLOCK WHERE LOCK_NAME = @ lockName" />
     <add key="quartz.dataSource.default.connectionStringName" value="QDWAPICentral" />
-    <add key="quartz.dataSource.default.connectionString" value="Data Source=.\KOSKE17;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True" />
+    <add key="quartz.dataSource.default.connectionString" value="Data Source=koske-pc01\KOSKE14;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=Sydney123;MultipleActiveResultSets=True;Pooling=True" />
+
   </quartz>
   <system.codedom>
     <compilers>
