--- a/PalladiumDwh.DWapi/database.config
+++ b/PalladiumDwh.DWapi/database.config
@@ -1,12 +1,12 @@
 <connectionStrings>
   <add
     name="DWAPICentral"
-    connectionString="Data Source=.;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=Megg96Megg;MultipleActiveResultSets=True;Max Pool Size=50000;Pooling=True"
+    connectionString="Data Source=PAL-5CG2114M0C;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=Megg96Megg;MultipleActiveResultSets=True;Max Pool Size=50000;Pooling=True"
     providerName="System.Data.SqlClient"
   />
   <add
     name="DWAPICentralHangfire"
-    connectionString="Data Source=.;Initial Catalog=DWAPICentralHangfire;Persist Security Info=True;User ID=sa;Password=Megg96Megg;MultipleActiveResultSets=True;Max Pool Size=50000;Pooling=True"
+    connectionString="Data Source=PAL-5CG2114M0C;Initial Catalog=DWAPICentralHangfire;Persist Security Info=True;User ID=sa;Password=Megg96Megg;MultipleActiveResultSets=True;Max Pool Size=50000;Pooling=True"
     providerName="System.Data.SqlClient"
   />
 </connectionStrings>
