--- a/PalladiumDwh.Core/PalladiumDwh.Core.csproj
+++ b/PalladiumDwh.Core/PalladiumDwh.Core.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Application\Extracts\Commands\SyncAllergiesChronicIllness.cs" />
     <Compile Include="Application\Extracts\Commands\SyncArt.cs" />
     <Compile Include="Application\Extracts\Commands\SyncBaseline.cs" />
+    <Compile Include="Application\Extracts\Commands\SyncCervicalCancerScreening.cs" />
     <Compile Include="Application\Extracts\Commands\SyncContactListing.cs" />
     <Compile Include="Application\Extracts\Commands\SyncCovid.cs" />
     <Compile Include="Application\Extracts\Commands\SyncDefaulterTracing.cs" />
@@ -94,6 +95,7 @@
     <Compile Include="Application\Extracts\Source\AllergiesChronicIllnessSourceBag.cs" />
     <Compile Include="Application\Extracts\Source\ArtSourceBag.cs" />
     <Compile Include="Application\Extracts\Source\BaselineSourceBag.cs" />
+    <Compile Include="Application\Extracts\Source\CervicalCancerScreeningSourceBag.cs" />
     <Compile Include="Application\Extracts\Source\ContactListingSourceBag.cs" />
     <Compile Include="Application\Extracts\Source\CovidSourceBag.cs" />
     <Compile Include="Application\Extracts\Source\DefaulterTracingSourceBag.cs" />
@@ -103,6 +105,7 @@
     <Compile Include="Application\Extracts\Source\Dto\AllergiesChronicIllnessSourceDto.cs" />
     <Compile Include="Application\Extracts\Source\Dto\ArtSourceDto.cs" />
     <Compile Include="Application\Extracts\Source\Dto\BaselineSourceDto.cs" />
+    <Compile Include="Application\Extracts\Source\Dto\CervicalCancerScreeningSourceDto.cs" />
     <Compile Include="Application\Extracts\Source\Dto\ContactListingSourceDto.cs" />
     <Compile Include="Application\Extracts\Source\Dto\CovidSourceDto.cs" />
     <Compile Include="Application\Extracts\Source\Dto\DefaulterTracingSourceDto.cs" />
@@ -134,6 +137,7 @@
     <Compile Include="Application\Extracts\Stage\Repositories\IStageAllergiesChronicIllnessExtractRepository.cs" />
     <Compile Include="Application\Extracts\Stage\Repositories\IStageArtExtractRepository.cs" />
     <Compile Include="Application\Extracts\Stage\Repositories\IStageBaselineExtractRepository.cs" />
+    <Compile Include="Application\Extracts\Stage\Repositories\IStageCervicalCancerScreeningExtractRepository.cs" />
     <Compile Include="Application\Extracts\Stage\Repositories\IStageContactListingExtractRepository.cs" />
     <Compile Include="Application\Extracts\Stage\Repositories\IStageCovidExtractRepository.cs" />
     <Compile Include="Application\Extracts\Stage\Repositories\IStageDefaulterTracingExtractRepository.cs" />
@@ -154,6 +158,7 @@
     <Compile Include="Application\Extracts\Stage\StageAllergiesChronicIllnessExtract.cs" />
     <Compile Include="Application\Extracts\Stage\StageArtExtract.cs" />
     <Compile Include="Application\Extracts\Stage\StageBaselineExtract.cs" />
+    <Compile Include="Application\Extracts\Stage\StageCervicalCancerScreeningExtract.cs" />
     <Compile Include="Application\Extracts\Stage\StageContactListingExtract.cs" />
     <Compile Include="Application\Extracts\Stage\StageCovidExtract.cs" />
     <Compile Include="Application\Extracts\Stage\StageDefaulterTracingExtract.cs" />
@@ -186,6 +191,7 @@
     <Compile Include="Interfaces\IActionRegisterRepository.cs" />
     <Compile Include="Interfaces\IAppRepository.cs" />
     <Compile Include="Interfaces\IAppService.cs" />
+    <Compile Include="Interfaces\ICervicalCancerScreeningRepository.cs" />
     <Compile Include="Interfaces\ILiveSyncService.cs" />
     <Compile Include="Interfaces\IMessagingReaderService.cs" />
     <Compile Include="Interfaces\IMessagingSenderService.cs" />
