--- a/PalladiumDwh.DWapi/Web.config
+++ b/PalladiumDwh.DWapi/Web.config
@@ -4,23 +4,23 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <configSections>
-    <section name="quartz" type="System.Configuration.NameValueSectionHandler, System, Version=1.0.5000.0,Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="PalladiumDwh.DWapi.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    </sectionGroup>
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
-  <connectionStrings configSource="database.config" />
-  <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <!-- <add key="owin:AutomaticAppStartup" value="false" /> -->
-  </appSettings>
-  <!--
+    <configSections>
+        <section name="quartz" type="System.Configuration.NameValueSectionHandler, System, Version=1.0.5000.0,Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="PalladiumDwh.DWapi.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+        <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </configSections>
+    <connectionStrings configSource="database.config" />
+    <appSettings>
+        <add key="webpages:Version" value="3.0.0.0" />
+        <add key="webpages:Enabled" value="false" />
+        <add key="ClientValidationEnabled" value="true" />
+        <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+        <!-- <add key="owin:AutomaticAppStartup" value="false" /> -->
+    </appSettings>
+    <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
     The following attributes can be set on the <httpRuntime> tag.
@@ -28,133 +28,132 @@
         <httpRuntime targetFramework="4.6.2" />
       </system.Web>
   -->
-  <system.web>
-    <compilation debug="true" targetFramework="4.6.2" />
-    <httpRuntime targetFramework="4.6" maxRequestLength="524288000" />
-  </system.web>
-  <system.webServer>
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
-    <security>
-      <requestFiltering>
-        <requestLimits maxAllowedContentLength="524288000" /> <!--500MB-->
-      </requestFiltering>
-    </security>
-  </system.webServer>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="1.1.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.IO.RecyclableMemoryStream" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.2.2.0" newVersion="1.2.2.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
-  <applicationSettings>
-    <PalladiumDwh.DWapi.Properties.Settings>
-      <setting name="QueueName" serializeAs="String">
-        <value>.\private$\dwapi.emr</value>
-      </setting>
-      <setting name="LiveSync" serializeAs="String">
-        <value>http://localhost:4777/stages/</value>
-      </setting>
-      <setting name="AllowSnapshot" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="Z_Dapper_Plus_LicenseName" serializeAs="String">
-        <value>1755;700-ThePalladiumGroup</value>
-      </setting>
-      <setting name="Z_Dapper_Plus_LicenseKey" serializeAs="String">
-        <value>218460a6-02d0-c26b-9add-e6b8d13ccbf4</value>
-      </setting>
-      <setting name="WorkerCount" serializeAs="String">
-        <value>manifest-10,patient-10,patientart-5,patientpharmacy-5,patientvisits-20,patientstatus-5,covid-5,defaultertracing-1,patientlabs-5,patientbaselines-1,patientadverseevents-1,otz-5,ovc-5,depressionscreening-1,drugalcoholscreening-1,enhancedadherencecounselling-1,gbvscreening-1,ipt-1,allergieschronicillness-1,contactlisting-1,default-1</value>
-      </setting>
-      <setting name="WorkerComandTimeout" serializeAs="String">
-        <value>30</value>
-      </setting>
-      <setting name="WorkerInvisibilityTimeout" serializeAs="String">
-        <value>30</value>
-      </setting>
-      <setting name="WorkerBatchRetention" serializeAs="String">
-        <value>30</value>
-      </setting>
-    </PalladiumDwh.DWapi.Properties.Settings>
-  </applicationSettings>
-  <quartz>
-    <add key="quartz.scheduler.instanceName" value="DWAPICentralScheduler" />
-    <add key="quartz.scheduler.instanceId" value="AUTO" />
-
-    <add key="quartz.threadPool.type" value="Quartz.Simpl.SimpleThreadPool, Quartz" />
-    <add key="quartz.threadPool.threadCount" value="7" />
-    <add key="quartz.threadPool.threadPriority" value="Normal" />
-
-    <add key="quartz.jobStore.type" value="Quartz.Impl.AdoJobStore.JobStoreTX, Quartz" />
-    <add key="quartz.serializer.type" value="json" />
-    <add key="quartz.jobStore.dataSource" value="default" />
-    <add key="quartz.jobStore.tablePrefix" value="QRTZ_" />
-    <add key="quartz.jobStore.clustered" value="false" />
-    <add key="quartz.jobStore.lockHandler.type" value="Quartz.Impl.AdoJobStore.SimpleSemaphore, Quartz" />
-    <add key="quartz.jobStore.driverDelegateType" value="Quartz.Impl.AdoJobStore.SqlServerDelegate, Quartz" />
-    <add key="quartz.dataSource.default.provider" value="SqlServer" />
-    <add key="quartz.jobStore.useProperties" value="false" />
-    <add key="quartz.jobStore.selectWithLockSQL" value="SELECT * FROM {0} LOCKS UPDLOCK WHERE LOCK_NAME = @ lockName" />
-    <add key="quartz.dataSource.default.connectionStringName" value="QDWAPICentral" />
-    <add key="quartz.dataSource.default.connectionString" value="Data Source=.\KOSKE17;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True" />
-  </quartz>
-  <system.codedom>
-    <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
-    </compilers>
-  </system.codedom>
+    <system.web>
+        <compilation debug="true" targetFramework="4.6.2" />
+        <httpRuntime targetFramework="4.6" maxRequestLength="524288000" />
+    </system.web>
+    <system.webServer>
+        <handlers>
+            <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+            <remove name="OPTIONSVerbHandler" />
+            <remove name="TRACEVerbHandler" />
+            <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+        </handlers>
+        <security>
+            <requestFiltering>
+                <requestLimits maxAllowedContentLength="524288000" />
+                <!--500MB-->
+            </requestFiltering>
+        </security>
+    </system.webServer>
+    <runtime>
+        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+            <dependentAssembly>
+                <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
+                <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
+                <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="1.1.0.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
+                <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+                <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+                <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+                <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="Microsoft.IO.RecyclableMemoryStream" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-1.2.2.0" newVersion="1.2.2.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+            </dependentAssembly>
+        </assemblyBinding>
+    </runtime>
+    <entityFramework>
+        <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+            <parameters>
+                <parameter value="mssqllocaldb" />
+            </parameters>
+        </defaultConnectionFactory>
+        <providers>
+            <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+        </providers>
+    </entityFramework>
+    <applicationSettings>
+        <PalladiumDwh.DWapi.Properties.Settings>
+            <setting name="QueueName" serializeAs="String">
+                <value>.\private$\dwapi.emr</value>
+            </setting>
+            <setting name="LiveSync" serializeAs="String">
+                <value>http://localhost:4777/stages/</value>
+            </setting>
+            <setting name="AllowSnapshot" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Z_Dapper_Plus_LicenseName" serializeAs="String">
+                <value>1755;700-ThePalladiumGroup</value>
+            </setting>
+            <setting name="Z_Dapper_Plus_LicenseKey" serializeAs="String">
+                <value>218460a6-02d0-c26b-9add-e6b8d13ccbf4</value>
+            </setting>
+            <setting name="WorkerCount" serializeAs="String">
+                <value>Manifest-10,Patient-10,PatientArt-5,PatientPharmacy-5,PatientVisits-20,PatientStatus-5,Covid-5,DefaulterTracing-1,PatientLabs-5,PatientBaselines-1,PatientAdverseEvents-1,Otz-5,Ovc-5,DepressionScreening-1,DrugAlcoholScreening-1,EnhancedAdherenceCounselling-1,GbvScreening-1,Ipt-1,AllergiesChronicIllness-1,ContactListing-1,CervicalCancerScreening-1,default-1</value>
+            </setting>
+            <setting name="WorkerComandTimeout" serializeAs="String">
+                <value>30</value>
+            </setting>
+            <setting name="WorkerInvisibilityTimeout" serializeAs="String">
+                <value>30</value>
+            </setting>
+            <setting name="WorkerBatchRetention" serializeAs="String">
+                <value>30</value>
+            </setting>
+        </PalladiumDwh.DWapi.Properties.Settings>
+    </applicationSettings>
+    <quartz>
+        <add key="quartz.scheduler.instanceName" value="DWAPICentralScheduler" />
+        <add key="quartz.scheduler.instanceId" value="AUTO" />
+        <add key="quartz.threadPool.type" value="Quartz.Simpl.SimpleThreadPool, Quartz" />
+        <add key="quartz.threadPool.threadCount" value="7" />
+        <add key="quartz.threadPool.threadPriority" value="Normal" />
+        <add key="quartz.jobStore.type" value="Quartz.Impl.AdoJobStore.JobStoreTX, Quartz" />
+        <add key="quartz.serializer.type" value="json" />
+        <add key="quartz.jobStore.dataSource" value="default" />
+        <add key="quartz.jobStore.tablePrefix" value="QRTZ_" />
+        <add key="quartz.jobStore.clustered" value="false" />
+        <add key="quartz.jobStore.lockHandler.type" value="Quartz.Impl.AdoJobStore.SimpleSemaphore, Quartz" />
+        <add key="quartz.jobStore.driverDelegateType" value="Quartz.Impl.AdoJobStore.SqlServerDelegate, Quartz" />
+        <add key="quartz.dataSource.default.provider" value="SqlServer" />
+        <add key="quartz.jobStore.useProperties" value="false" />
+        <add key="quartz.jobStore.selectWithLockSQL" value="SELECT * FROM {0} LOCKS UPDLOCK WHERE LOCK_NAME = @ lockName" />
+        <add key="quartz.dataSource.default.connectionStringName" value="QDWAPICentral" />
+        <add key="quartz.dataSource.default.connectionString" value="Data Source=.\KOSKE17;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True" />
+    </quartz>
+    <system.codedom>
+        <compilers>
+            <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
+            <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+        </compilers>
+    </system.codedom>
 </configuration>
