--- a/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
+++ b/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Data\DwapiCentralContext.cs" />
     <Compile Include="Data\Repository\ActionRegisterRepository.cs" />
     <Compile Include="Data\Repository\AppRepository.cs" />
+    <Compile Include="Data\Repository\CervicalCancerScreeningRepository.cs" />
     <Compile Include="Data\Repository\FacilityRepository.cs" />
     <Compile Include="Data\Repository\CovidRepository.cs" />
     <Compile Include="Data\Repository\DefaulterTracingRepository.cs" />
@@ -110,6 +111,7 @@
     <Compile Include="Data\Repository\Stage\StageAllergiesChronicIllnessExtractRepository.cs" />
     <Compile Include="Data\Repository\Stage\StageArtExtractRepository.cs" />
     <Compile Include="Data\Repository\Stage\StageBaselineExtractRepository.cs" />
+    <Compile Include="Data\Repository\Stage\StageCervicalCancerScreeningExtractRepository.cs" />
     <Compile Include="Data\Repository\Stage\StageContactListingExtractRepository.cs" />
     <Compile Include="Data\Repository\Stage\StageCovidExtractRepository.cs" />
     <Compile Include="Data\Repository\Stage\StageDefaulterTracingExtractRepository.cs" />
@@ -230,6 +232,10 @@
     <Compile Include="Migrations\202210210835384_AddedDateCreatedAndModified.designer.cs">
       <DependentUpon>202210210835384_AddedDateCreatedAndModified.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202305111948562_CervicalCancerScreeningInitial.cs" />
+    <Compile Include="Migrations\202305111948562_CervicalCancerScreeningInitial.designer.cs">
+      <DependentUpon>202305111948562_CervicalCancerScreeningInitial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\LiveSeeder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -314,6 +320,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202210210835384_AddedDateCreatedAndModified.resx">
       <DependentUpon>202210210835384_AddedDateCreatedAndModified.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202305111948562_CervicalCancerScreeningInitial.resx">
+      <DependentUpon>202305111948562_CervicalCancerScreeningInitial.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Seed\MasterFacility.csv" />
   </ItemGroup>
