added IIT risk score

--- a/PalladiumDwh.Core.Tests/PalladiumDwh.Core.Tests.csproj
+++ b/PalladiumDwh.Core.Tests/PalladiumDwh.Core.Tests.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Application\Extracts\Commands\SyncDrugAlcoholScreeningTests.cs" />
     <Compile Include="Application\Extracts\Commands\SyncEnhancedAdherenceCounsellingTests.cs" />
     <Compile Include="Application\Extracts\Commands\SyncGbvScreeningTests.cs" />
+    <Compile Include="Application\Extracts\Commands\SyncIITRiskScoresTests.cs" />
     <Compile Include="Application\Extracts\Commands\SyncIptTests.cs" />
     <Compile Include="Application\Extracts\Commands\SyncLaboratoryTests.cs" />
     <Compile Include="Application\Extracts\Commands\SyncOtzTests.cs" />
