--- a/PalladiumDwh.DwapiService/PalladiumDwh.DWapiService.csproj
+++ b/PalladiumDwh.DwapiService/PalladiumDwh.DWapiService.csproj
@@ -128,6 +128,7 @@
     </Compile>
     <Compile Include="DependencyResolution\IoC.cs" />
     <Compile Include="Job\SyncCervicalCancerScreeningob.cs" />
+    <Compile Include="Job\SyncIIITRiskScoresJob.cs" />
     <Compile Include="Job\SyncManifestJob.cs" />
     <Compile Include="Job\SyncDefaulterTracingJob.cs" />
     <Compile Include="Job\SyncCovidJob.cs" />
