--- a/PalladiumDwh.Shared/PalladiumDwh.Shared.csproj
+++ b/PalladiumDwh.Shared/PalladiumDwh.Shared.csproj
@@ -86,7 +86,8 @@
     <Compile Include="Enum\CargoType.cs" />
     <Compile Include="Extentions\TypeExtentions.cs" />
     <Compile Include="Interfaces\DTOs\IAllergiesChronicIllnessExtractDTO.cs" />
-    <Compile Include="Interfaces\DTOs\ICervicalCancerScreeningExtractDTO.cs" />
+    <Compile Include="Interfaces\DTOs\IArtFastTrackExtractDTO.cs" />
+    <Compile Include="Interfaces\DTOs\ICancerScreeningExtractDTO.cs" />
     <Compile Include="Interfaces\DTOs\IContactListingExtractDTO.cs" />
     <Compile Include="Interfaces\DTOs\ICovidExtractDTO.cs" />
     <Compile Include="Interfaces\DTOs\IDefaulterTracingExtractDTO.cs" />
@@ -101,7 +102,8 @@
     <Compile Include="Interfaces\DTOs\IOvcExtractDTO.cs" />
     <Compile Include="Interfaces\Extracts\IAdverseEventExtract.cs" />
     <Compile Include="Interfaces\Extracts\IAllergiesChronicIllnessExtract.cs" />
-    <Compile Include="Interfaces\Extracts\ICervicalCancerScreeningExtract.cs" />
+    <Compile Include="Interfaces\Extracts\IArtFastTrackExtract.cs" />
+    <Compile Include="Interfaces\Extracts\ICancerScreeningExtract.cs" />
     <Compile Include="Interfaces\Extracts\IContactListingExtract.cs" />
     <Compile Include="Interfaces\Extracts\ICovidExtract.cs" />
     <Compile Include="Interfaces\Extracts\IDefaulterTracingExtract.cs" />
@@ -115,8 +117,9 @@
     <Compile Include="Interfaces\Extracts\IOvcExtract.cs" />
     <Compile Include="Interfaces\IAdverseEvent.cs" />
     <Compile Include="Interfaces\IAllergiesChronicIllness.cs" />
+    <Compile Include="Interfaces\IArtFastTrack.cs" />
     <Compile Include="Interfaces\IArtNew.cs" />
-    <Compile Include="Interfaces\ICervicalCancerScreening.cs" />
+    <Compile Include="Interfaces\ICancerScreening.cs" />
     <Compile Include="Interfaces\IClearPatientRecords.cs" />
     <Compile Include="Interfaces\IContactListing.cs" />
     <Compile Include="Interfaces\ICovid.cs" />
@@ -152,7 +155,8 @@
     <Compile Include="Interfaces\IStatusNew.cs" />
     <Compile Include="Interfaces\IVisitNew.cs" />
     <Compile Include="Interfaces\Profiles\IAllergiesChronicIllnessProfile.cs" />
-    <Compile Include="Interfaces\Profiles\ICervicalCancerScreeningProfile.cs" />
+    <Compile Include="Interfaces\Profiles\IArtFastTrackProfileProfile.cs" />
+    <Compile Include="Interfaces\Profiles\ICancerScreeningProfile.cs" />
     <Compile Include="Interfaces\Profiles\IContactListingProfile.cs" />
     <Compile Include="Interfaces\Profiles\IDepressionScreeningProfile.cs" />
     <Compile Include="Interfaces\Profiles\IDrugAlcoholScreeningProfile.cs" />
@@ -168,7 +172,8 @@
     <Compile Include="Interfaces\Stages\IStage.cs" />
     <Compile Include="Interfaces\Stages\IStagePatientExtract.cs" />
     <Compile Include="Interfaces\Stages\IStageVisitExtract.cs" />
-    <Compile Include="Model\DTO\CervicalCancerScreeningExtractDTO.cs" />
+    <Compile Include="Model\DTO\ArtFastTrackExtractDTO.cs" />
+    <Compile Include="Model\DTO\CancerScreeningExtractDTO.cs" />
     <Compile Include="Model\DTO\FacilityCacheDto.cs" />
     <Compile Include="Model\DTO\FacilityId.cs" />
     <Compile Include="Model\DTO\FacMetric.cs" />
@@ -199,7 +204,8 @@
     <Compile Include="Model\DTO\PatientVisitExtractDTO.cs" />
     <Compile Include="Model\ExrtactMap.cs" />
     <Compile Include="Model\Extract\AllergiesChronicIllnessExtract.cs" />
-    <Compile Include="Model\Extract\CervicalCancerScreeningExtract.cs" />
+    <Compile Include="Model\Extract\ArtFastTrackExtract.cs" />
+    <Compile Include="Model\Extract\CancerScreeningExtract.cs" />
     <Compile Include="Model\Extract\ContactListingExtract.cs" />
     <Compile Include="Model\Extract\CovidExtract.cs" />
     <Compile Include="Model\Extract\DefaulterTracingExtract.cs" />
@@ -241,7 +247,8 @@
     <Compile Include="Interfaces\Profiles\IPatientStatusProfile.cs" />
     <Compile Include="Interfaces\Profiles\IPatientVisitProfile.cs" />
     <Compile Include="Model\Manifest.cs" />
-    <Compile Include="Model\Profile\CervicalCancerScreeningProfile.cs" />
+    <Compile Include="Model\Profile\ArtFastTrackProfile.cs" />
+    <Compile Include="Model\Profile\CancerScreeningProfile.cs" />
     <Compile Include="Model\Profile\ExtractProfile.cs" />
     <Compile Include="Model\Profile\DefaulterTracingProfile.cs" />
     <Compile Include="Model\Profile\CovidProfile.cs" />
